k8s/ingress/ingressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ingress-class
spec:
  controller: nginx.org/ingress-controller
